add wtforms for html 5 input

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,9 @@
      {% include "navigation_and_header.html" %}
       <main class="mdl-layout__content mdl-color--grey-100">
         <div class="mdl-grid demo-content">
-         {% block content %}{% endblock %}
+          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+            {% block content %}{% endblock %}
+          </div>
         </div>
       </main>
     </div>
