--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,14 +64,19 @@
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
      {% include "navigation_and_header.html" %}
       <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid demo-content">
-          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+        <div class="mdl-grid">
+             <div class="mdl-layout-spacer"></div>
             {% block content %}{% endblock %}
-          </div>
+          <!-- <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+
+          </div> -->
+           <div class="mdl-layout-spacer"></div>
         </div>
       </main>
     </div>
 
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    {% block extra_js %}
+    {% endblock %}
   </body>
 </html>
