--- a/app/templates/base_lte.html
+++ b/app/templates/base_lte.html
@@ -17,7 +17,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="/static/plugins/datepicker/datepicker3.css">
-    <link rel="stylesheet" href="/static/plugins/timepicker/bootstrap-timepicker.min.css">
+
   <!-- Theme style -->
   <link rel="stylesheet" href="/static/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
@@ -268,7 +268,7 @@ desired effect
 <script src="/static/js/bootstrap.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/static/js/app.min.js"></script>
-
+<script src="/static/plugins/datepicker/bootstrap-datepicker.js"></script>
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. Slimscroll is required when using the
