--- a/app/templates/delivery_jobs.html
+++ b/app/templates/delivery_jobs.html
@@ -11,7 +11,7 @@
     <div class="col-xs-12">
         <div class="box">
             <div class="box-header">
-                <h3 class="box-title">Courier List</h3>
+                <h3 class="box-title">Delivery Jobs</h3>
             </div>
             <div class="box-body">
                 <table id="jobs_list" class="table table-bordered table-hover">
@@ -62,7 +62,7 @@
                 <h4 class="modal-title">Add New Delivery Jobs</h4>
             </div>
 
-            <form action="" method="post" name="courier">
+            <form action="" method="post" name="delivery_jobs">
             <div class="modal-body">
                 <div style="color: #e42323">
                   {% with messages = get_flashed_messages() %}
@@ -120,8 +120,14 @@
 
                     <div class="form-group">
                         <label for="{{ form.deliver_date.id }}">{{ form.deliver_date.label.text }}</label>
-                        {{ form.deliver_date(class_="form-control") }}
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                        {{ form.deliver_date(class_="form-control pull-right") }}
+                        </div>
                     </div>
+
 
                     <div class="bootstrap-timepicker">
                         <div class="form-group">
@@ -148,20 +154,6 @@
                         <label for="{{ form.courier.id }}">{{ form.courier.label.text }}</label>
                         {{ form.courier(class_="form-control") }}
                     </div>
-
-                    <div class="form-group">
-                <label>Date:</label>
-
-                <div class="input-group date">
-                  <div class="input-group-addon">
-                    <i class="fa fa-calendar"></i>
-                  </div>
-                  <input type="text" class="form-control pull-right" id="datepicker">
-                </div>
-                <!-- /.input group -->
-              </div>
-              <!-- /.form group -->
-
                   </div>
             </div>
 
@@ -177,7 +169,8 @@
 {% block extra_js %}
 <script src="/static/plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="/static/plugins/timepicker/bootstrap-timepicker.min.js"></script>
-<script src="/static/plugins/datepicker/bootstrap-datepicker.js"></script>
+<script src="/static/plugins/input-mask/jquery.inputmask.js"></script>
+<script src="/static/plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
 <script>
     $(function() {
 
@@ -190,17 +183,9 @@
       "autoWidth": true
     });
 
-    $('#{{ form.pickup_date.id }}').datepicker({
-      autoclose: true
-    });
+    $("#{{ form.pickup_date.id }}").inputmask("dd/mm/yyyy", {"placeholder": "dd/mm/yyyy"});
 
-    $('#{{ form.deliver_date.id }}').datepicker({
-      autoclose: true
-    });
-
-    $('#datepicker').datepicker({
-      autoclose: true
-    });
+    $("#{{ form.deliver_date.id }}").inputmask("dd/mm/yyyy", {"placeholder": "dd/mm/yyyy"});
 
     $(".timepicker").timepicker({
       showInputs: false
