--- a/app/templates/delivery_job_detail.html
+++ b/app/templates/delivery_job_detail.html
@@ -80,7 +80,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Add New Delivery Jobs</h4>
+                <h4 class="modal-title">Update delivery jobs</h4>
             </div>
 
             <form action="" method="post" name="delivery_jobs">
